--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<title>Nowe</title>
-<h1>Cool</h1>
-<p>hdsndsn</p>
-<h2>Amazing 21</p>
-<p>Love it</p>
+<!DOCTYPE html>
+<html lang="en">
+	<head>	
+		<title>Git</title>
+	</head>
+	<body>
+		<h1>Cool</h1>
+		<p>This is something new</p>
+		<h2>Amazing 21</h2>
+		<p>Love it</p>
+	</body>
+</html>
