--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Git</title>
 	</head>
 	<body>
-		<h1>Cool</h1>
+		<h1>Programming is cool</h1>
 		<p>This is something new</p>
 		<h2>Amazing 21</h2>
 		<p>Love it</p>
