--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<body>
 		<h1>Programming is cool</h1>
 		<p>This is something new</p>
-		<h2>Amazing 21</h2>
+		<h2>How to use Git</h2>
+		<p>This is very important</p>
 		<p>Love it</p>
 	</body>
 </html>
